[metadata]
name = jcs
summary = Tool to generate Jenkins slave nodes on Clouds
description-file =
    README.rst
home-page = https://github.com/toabctl/jcs
requires-dist = setuptools
license = Apache-2.0
license_file = LICENSE
classifier =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3
    Topic :: Utilities

[options]
install_requires =
    requests

packages =
    jcs

[options.extras_require]
aws = boto3; ec2imgutils
obs = requests
jenkins =
    jenkinsapi @ git+https://github.com/kshtsk/jenkinsapi@wip-support-newest-credentials-version
tests =
    pycodestyle
    pylint
openstack = openstacksdk

[options.entry_points]
console_scripts =
    jcs = jcs:main

[pycodestyle]
max-line-length = 100
